fix toast and popover on small devices

--- a/combat-sports-events/src/assets/main.css
+++ b/combat-sports-events/src/assets/main.css
@@ -37,6 +37,14 @@ a,
   text-transform: uppercase;
 }
 
+.p-toast {
+  max-width: 90vw;
+}
+
+.p-popover {
+  margin: 18px;
+}
+
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
